[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/themes/ws_font_small.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/themes/ws_font_2.tres" type="DynamicFont" id=3]
[ext_resource path="res://prisoners_dilemma.gd" type="Script" id=4]

[node name="PrisonersDilemma" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 100.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="round" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 0.05
margin_top = 40.0
margin_right = -40.0
custom_fonts/font = ExtResource( 2 )
text = "Round: 0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="timer" type="Label" parent="."]
anchor_bottom = 0.05
margin_left = 40.0
custom_fonts/font = ExtResource( 3 )
text = "15"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="opp" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.05
margin_top = 20.0
margin_right = -40.0
custom_fonts/font = ExtResource( 2 )
text = "0/0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="you" type="Label" parent="."]
anchor_top = 0.05
anchor_right = 0.5
anchor_bottom = 0.05
margin_left = 40.0
margin_top = 40.0
margin_bottom = 126.0
custom_fonts/font = ExtResource( 2 )
text = "0/0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Payoff Detail" type="Label" parent="."]
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 0.15
margin_left = 20.0
margin_top = 40.0
custom_fonts/font = ExtResource( 2 )
text = "Payoff
(You, Opponent)
(Confess, Confess) = -5
(Confess, Deny) = 0
(Deny, Confess) = -10
(Deny, Deny) = -1"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confess" type="Button" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.6
margin_left = 40.0
margin_right = -40.0
custom_fonts/font = ExtResource( 2 )
text = "Confess"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="deny" type="Button" parent="."]
anchor_top = 0.65
anchor_right = 1.0
anchor_bottom = 0.75
margin_left = 40.0
margin_right = -40.0
custom_fonts/font = ExtResource( 2 )
text = "Deny"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="loby" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 43.1748
margin_right = -36.8252
margin_bottom = -40.0
custom_fonts/font = ExtResource( 2 )
text = "Goto Lobby"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="confess" to="." method="_on_confess_pressed"]
[connection signal="pressed" from="deny" to="." method="_on_deny_pressed"]
[connection signal="pressed" from="loby" to="." method="_on_loby_pressed"]
